--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@cloudflare/workers-types": "^4.20231218.0",
     "typescript": "^5.0.4",
     "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "hono": "^3.12.0"
   }
 }
