--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "the-finals-api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev"
+    "dev": "wrangler dev"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20231218.0",
-    "typescript": "^5.0.4",
-    "wrangler": "^3.58.0"
+    "@cloudflare/workers-types": "^4.20240605.0",
+    "typescript": "^5.4.5",
+    "wrangler": "^3.60.2"
   },
   "dependencies": {
-    "hono": "^3.12.3",
+    "hono": "^4.4.5",
     "zod": "^3.23.8"
   }
 }
