--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "the-finals-api",
-  "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy --minify",
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+  },
+  "dependencies": {
+    "hono": "^4.6.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240605.0",
-    "typescript": "^5.4.5",
-    "wrangler": "^3.60.2"
-  },
-  "dependencies": {
-    "hono": "^4.4.5",
-    "zod": "^3.23.8"
+    "wrangler": "^3.76.0"
   }
 }
