--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "the-finals-api",
   "scripts": {
     "dev": "wrangler dev",
+    "dev:remote": "wrangler dev --remote",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
