feat: add bidaily backup of select leaderboards

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,7 @@ compatibility_date = "2023-12-18"
 kv_namespaces = [
     { binding = "KV", id = "17b5f20386244ab985c8a6189b830595", preview_id = "17b5f20386244ab985c8a6189b830595" },
 ]
+
+[triggers]
+# Run every 12 hours
+crons = ["0 */12 * * *"]
