--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "dev": "wrangler dev",
     "dev:remote": "wrangler dev --remote",
     "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "biome": "npx @biomejs/biome check --write ."
   },
   "dependencies": {
     "hono": "^4.6.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.2",
     "@cloudflare/workers-types": "^4.20240605.0",
     "wrangler": "^3.78.10"
   }
